<resources>
    <string name="app_name">Science-News</string>
    <string name="science_news">Science News</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="back_button">Back</string>
    <string name="menu_button">Menu</string>
    <string name="content_image">Content Image</string>
    <string name="save_button">Save</string>
    <string name="extra_section_button">Extra Section</string>
    <string name="what_to_read">What to read</string>
    <string name="user">User</string>
    <string name="search">Search</string>
    <string name="overview">Overview</string>
    <string name="article_thumbnail">Article Thumbnail</string>
    <string name="turn_back_to_home_page">Turn back to Home Page</string>

    <!-- Temp Data For Tools:text -->
    <string name="body_text_tmp1">For the first time, astronomers have captured solid evidence of a rare double cosmic cannibalism — a star swallowing a compact object such as a black hole or neutron star. In turn, that object gobbled the star’s core, causing it to explode and leave behind only a black hole.
<br /><br />
The first hints of the gruesome event, described in the Sept. 3 Science, came from the Very Large Array (VLA), a radio telescope consisting of 27 enormous dishes in the New Mexican desert near Socorro. During the observatory’s scans of the night sky in 2017, a burst of radio energy as bright as the brightest exploding star — or supernova — as seen from Earth appeared in a dwarf star–forming galaxy approximately 500 million light-years away.
<br /><br />
“We thought, ‘Whoa, this is interesting,’” says Dillon Dong, an astronomer at Caltech.
<br /><br />
He and his colleagues made follow-up observations of the galaxy using the VLA and one of the telescopes at the W.M. Keck Observatory in Hawaii, which sees in the same optical light as our eyes. The Keck telescope caught a luminous outflow of material spewing in all directions at 3.2 million kilometers per hour from a central location, suggesting that an energetic explosion had occurred there in the past.</string>

    <string name="body_text_tmp">The team then found an extremely bright X-ray source in archival data from the Monitor of All Sky X-ray Image (MAXI) telescope, a Japanese instrument that sits on the International Space Station. This X-ray burst was in the same place as the radio one but had been observed back in 2014.
<br /><br />
Piecing the data together, Dong and his colleagues think this is what happened: Long ago, a binary pair of stars were born orbiting each other; one died in a spectacular supernova and became either a neutron star or a black hole. As gravity brought the two objects closer together, the dead star actually entered the outer layers of its larger stellar sibling.
<br /><br />
The compact object spiraled inside the still-living star for hundreds of years, eventually making its way down to and then eating its partner’s core. During this time, the larger star shed huge amounts of gas and dust, forming a shell of material around the duo.
<br /><br />
In the living star’s center, gravitational forces and complex magnetic interactions from the dead star’s munching launched enormous jets of energy — picked up as an X-ray flash in 2014 — as well as causing the larger star to explode. Debris from the detonation smashed with colossal speed into the surrounding shell of material, generating the optical and radio light.
<br /><br />
While theorists have previously envisioned such a scenario, dubbed a merger-triggered core collapse supernova, this appears to represent the first direct observation of this phenomenon, Dong says.
<br /><br />
“They’ve done some pretty good detective work using these observations,” says Adam Burrows, an astrophysicist at Princeton University who was not involved in the new study. He says the findings should help constrain the timing of a process called common envelope evolution, in which one star becomes immersed inside another. Such stages in stars’ lives are relatively short-lived in cosmic time and difficult to both observe and simulate. Most of the time, the engulfing partner dies before its core is consumed, leading to two compact objects like white dwarfs, neutron stars or black holes orbiting one another.
<br /><br />
The final stages of these systems are exactly what observatories like the Advanced Laser Interferometer Gravitational-Wave Observatory, or LIGO, detect when capturing spacetime’s ripples, Dong says (SN: 8/4/21). Now that astronomers know to look for these multiple lines of evidence, he expects them to find more examples this strange phenomenon.</string>
    <!---->
</resources>