<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user_image"
            type="java.lang.String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_background"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageView
            LoadCircleImage="@{user_image}"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:contentDescription="@string/user"
            android:padding="5dp"
            tools:src="@drawable/news1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:fontFamily="@font/pinto"
            android:gravity="center"
            android:text="@string/science_news"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/search"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_search" />
    </LinearLayout>
</layout>