<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="SectionHandler"
            type="com.web0zz.science_news.screen.home.sections.handler.SectionHandler" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_background"
        android:onClick="@{SectionHandler::getIntoDetail}"
        android:orientation="vertical">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="5dp"
            android:alpha="0.3"
            android:background="@color/white" />

        <ImageView
            android:id="@+id/section_thumbnail_imageView"
            CornerRadius="@{30}"
            Height="@{600}"
            LoadRoundedImage="@{SectionHandler.article.thumbnail}"
            Width="@{1000}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/article_thumbnail"
            android:padding="10dp"
            tools:src="@drawable/news1" />

        <TextView
            android:id="@+id/section_category_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:fontFamily="@font/roboto_bold"
            android:paddingHorizontal="10dp"
            android:paddingBottom="10dp"
            android:text="@{SectionHandler.article.section}"
            android:textColor="@color/white"
            tools:text="SPACE" />

        <TextView
            android:id="@+id/section_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:paddingHorizontal="10dp"
            android:text="@{SectionHandler.article.title}"
            android:textColor="@color/white"
            tools:text="Astronomers may have seen a star gulp down a black hole and explode" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:weightSum="6">

            <TextView
                author="@{SectionHandler.article.author}"
                date="@{SectionHandler.article.date}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:alpha="0.7"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/white"
                tools:text="September 2, 2021 • Joe Bishop" />

            <ImageButton
                android:id="@+id/save_imageButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:alpha="0.7"
                android:background="@null"
                android:contentDescription="@string/save_button"
                android:padding="5dp"
                android:src="@drawable/ic_save" />

            <ImageButton
                android:id="@+id/extra_imageButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:alpha="0.7"
                android:background="@null"
                android:contentDescription="@string/extra_section_button"
                android:padding="5dp"
                android:src="@drawable/ic_menu" />
        </LinearLayout>
    </LinearLayout>
</layout>