<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragInterface"
            type="com.web0zz.science_news.screen.detail.DetailFragment" />

        <variable
            name="article"
            type="com.web0zz.science_news.data.model.Article" />
    </data>

    <!-- TODO move hard coded values to res-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_background">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/detail_constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_background"
            app:layoutDescription="@xml/fragment_detail_screen_xml_constraintlayout_scene">

            <ImageView
                android:id="@+id/thumbnail_imageView"
                LoadImage="@{article.thumbnail}"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:contentDescription="@string/thumbnail"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/news1" />

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/back_button"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:onClick="@{() -> fragInterface.moveBack()}"
                android:padding="10dp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="@+id/tall_left_guideline"
                app:layout_constraintTop_toTopOf="@+id/tall_top_guideline" />

            <ImageButton
                android:id="@+id/extra_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@null"
                android:contentDescription="@string/menu_button"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="10dp"
                android:src="@drawable/ic_menu"
                app:layout_constraintEnd_toStartOf="@+id/tall_right_guideline"
                app:layout_constraintTop_toTopOf="@+id/tall_top_guideline" />

            <TextView
                android:id="@+id/dateAuthor_textView"
                author="@{article.author}"
                date="@{article.date}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:fontFamily="@font/roboto_light"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:textColor="@color/white"
                android:textIsSelectable="true"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/thumbnail_imageView"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/thumbnail_imageView"
                tools:text="February 14, 2021 • Joe Bishop" />

            <TextView
                android:id="@+id/title_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:lineSpacingExtra="6dp"
                android:text="@{article.title}"
                android:textColor="@color/white"
                android:textIsSelectable="true"
                android:textSize="26sp"
                app:layout_constraintEnd_toStartOf="@+id/tall_right_guideline"
                app:layout_constraintStart_toStartOf="@+id/tall_left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/dateAuthor_textView"
                tools:text="Astronomers may have seen a star gulp down a black hole and explode" />

            <TextView
                android:id="@+id/article_short_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_light_italic"
                android:lineSpacingExtra="4dp"
                android:text="@{article.shortBody}"
                android:textColor="@color/white"
                android:textIsSelectable="true"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/tall_right_guideline"
                app:layout_constraintStart_toStartOf="@+id/tall_left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/title_textView"
                tools:text="It’s the first firm evidence of a rare cosmic phenomenon" />

            <TextView
                android:id="@+id/article_body_first_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:fontFamily="@font/roboto_light"
                android:lineSpacingExtra="4dp"
                android:text="@{article.bodyFirst}"
                android:textColor="@color/white"
                android:textIsSelectable="true"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/tall_right_guideline"
                app:layout_constraintStart_toStartOf="@+id/tall_left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/article_short_textView"
                tools:text="@string/body_text_tmp1" />

            <ImageView
                android:id="@+id/content_imageView"
                CornerRadius="@{30}"
                Height="@{650}"
                LoadRoundedImage="@{article.contentImage}"
                Width="@{1000}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="20dp"
                android:contentDescription="@string/content_image"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@+id/tall_right_guideline"
                app:layout_constraintStart_toStartOf="@+id/tall_left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/article_body_first_textView"
                tools:src="@drawable/news1" />

            <TextView
                android:id="@+id/article_body_second_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:fontFamily="@font/roboto_light"
                android:lineSpacingExtra="4dp"
                android:text="@{article.bodySecond}"
                android:textColor="@color/white"
                android:textIsSelectable="true"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/tall_right_guideline"
                app:layout_constraintStart_toStartOf="@+id/tall_left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/content_imageView"
                tools:text="@string/body_text_tmp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/tall_top_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/tall_left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="10dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/tall_right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="10dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="20dp" />

        </androidx.constraintlayout.motion.widget.MotionLayout>
    </ScrollView>
</layout>